--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			enable_page_level_ads: true
 		});
 	</script>
-	
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
@@ -117,7 +117,7 @@
 	</section>
 
 	<!-- Team -->
-	<section class="" id="team">
+	<section class="" style="background-color: #ddd;" id="team">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
