changed my intro

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-8 mx-auto text-center">
-					<p class="large text-muted">Hi!, I'm Ervin P. Beñez. I'm a freelance web developer and a graphic artist based in Philippines who work remotely on projects for clients around the globe.</p>
+					<p class="large text-muted">Hi!, I'm Ervin P. Beñez. I'm a web developer and a graphic artist from the Philippines.</p>
 				</div>
 			</div>
 		</div>
@@ -196,7 +196,7 @@
 				<div class="col-md-4">
 				</div>
 				<div class="col-md-4">
-					<span class="copyright">Copyright &copy; 2020 </span>
+					<span class="copyright">Copyright &copy; 2021 </span>
 				</div>
 				<div class="col-md-4">
 				</div>
