--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 						<a class="nav-link js-scroll-trigger" href="#services">Services</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link js-scroll-trigger" href="#team">About</a>
 					</li>
 					<li class="nav-item">
