added eased project

--- a/index.html
+++ b/index.html
@@ -159,6 +159,17 @@
 	                    </div>
 	                </div>
 	            </div>
+				<div class="col-lg-4 col-sm-6 mb-4">
+	                <div class="portfolio-item">
+	                    <a class="portfolio-link" href="https://www.easeddepedkor.net/" target="_blank">
+	                        <img class="img-fluid" src="/img/portfolio/eased.png" alt="SP" />
+	                    </a>
+	                    <div class="portfolio-caption">
+	                        <div class="portfolio-caption-heading">EASED System</div>
+	                        <div class="portfolio-caption-subheading text-muted">Click image to view project</div>
+	                    </div>
+	                </div>
+	            </div>
 	        </div>
 	    </div>
 	</section>
