update portfolio images and comments for clarity

--- a/index.html
+++ b/index.html
@@ -129,44 +129,44 @@
 	            <div class="col-lg-4 col-sm-6 mb-4">
 	                <div class="portfolio-item">
 	                    <a class="portfolio-link" href="http://rmis2020.herokuapp.com/" target="_blank">
-	                        <img class="img-fluid" src="/img/portfolio/rmis.jpg" alt="RMIS" />
+	                        <img class="img-fluid" src="img/portfolio/rmis.jpg" alt="RMIS" />
 	                    </a>
 	                    <div class="portfolio-caption">
 	                        <div class="portfolio-caption-heading">Rice Mill Information System</div>
-	                        <div class="portfolio-caption-subheading text-muted">Click for demo</div>
+	                        <!-- <div class="portfolio-caption-subheading text-muted">Click for demo</div> -->
 	                    </div>
 	                </div>
 	            </div>
 	            <div class="col-lg-4 col-sm-6 mb-4">
 	                <div class="portfolio-item">
 	                    <a class="portfolio-link" href="http://wms2019.herokuapp.com/" target="_blank">
-	                        <img class="img-fluid" src="/img/portfolio/wms.png" alt="WMS" />
+	                        <img class="img-fluid" src="img/portfolio/wms.png" alt="WMS" />
 	                    </a>
 	                    <div class="portfolio-caption">
 	                        <div class="portfolio-caption-heading">Warehouse Management System</div>
-	                        <div class="portfolio-caption-subheading text-muted">Click for demo</div>
+	                        <!-- <div class="portfolio-caption-subheading text-muted">Click for demo</div> -->
 	                    </div>
 	                </div>
 	            </div>
 	            <div class="col-lg-4 col-sm-6 mb-4">
 	                <div class="portfolio-item">
 	                    <!-- <a class="portfolio-link" href="#"> -->
-	                        <img class="img-fluid" src="/img/portfolio/sp.png" alt="SP" />
+	                        <img class="img-fluid" src="img/portfolio/sp.png" alt="SP" />
 	                    <!-- </a> -->
 	                    <div class="portfolio-caption">
 	                        <div class="portfolio-caption-heading">NDMU Student Portal</div>
-	                        <div class="portfolio-caption-subheading text-muted">Demo not available</div>
+	                        <!-- <div class="portfolio-caption-subheading text-muted">Demo not available</div> -->
 	                    </div>
 	                </div>
 	            </div>
 				<div class="col-lg-4 col-sm-6 mb-4">
 	                <div class="portfolio-item">
 	                    <a class="portfolio-link" href="https://www.easeddepedkor.net/" target="_blank">
-	                        <img class="img-fluid" src="/img/portfolio/eased.png" alt="SP" />
+	                        <img class="img-fluid" src="img/portfolio/eased.png" alt="SP" />
 	                    </a>
 	                    <div class="portfolio-caption">
 	                        <div class="portfolio-caption-heading">EASED System</div>
-	                        <div class="portfolio-caption-subheading text-muted">Click image to view project</div>
+	                        <!-- <div class="portfolio-caption-subheading text-muted">Click image to view project</div> -->
 	                    </div>
 	                </div>
 	            </div>
