--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115878304-7"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
+		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 
 		gtag('config', 'UA-115878304-7');
@@ -33,7 +34,8 @@
 	<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet'
+		type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
 	<!-- Custom styles for this template -->
@@ -47,7 +49,9 @@
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
 		<div class="container">
 			<a class="navbar-brand js-scroll-trigger" href="#page-top">Hi! I'm Ervin</a>
-			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+				data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+				aria-label="Toggle navigation">
 				Menu
 				<i class="fas fa-bars"></i>
 			</button>
@@ -87,7 +91,9 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading text-uppercase">Services</h2>
-					<h3 class="section-subheading text-muted">I understand your business and its goals and I implement my skills and expertise to ensure that your website or web application can help you reach those goals.</h3>
+					<h3 class="section-subheading text-muted">I understand your business and its goals and I implement
+						my skills and expertise to ensure that your website or web application can help you reach those
+						goals.</h3>
 				</div>
 			</div>
 			<div class="row text-center">
@@ -97,7 +103,17 @@
 						<i class="fas fa-code fa-stack-1x fa-inverse"></i>
 					</span>
 					<h4 class="service-heading">Web Development</h4>
-					<p class="text-muted">The need for a website is to add value for your business and reach more customers around the globe. As a freelance web designer & developer I have sound knowledge in web design & web development.</p>
+					<p class="text-muted">I build reliable, scalable web applications using modern frameworks and best
+						practices, focusing on performance, maintainability, and real business needs.</p>
+				</div>
+				<div class="col-md-4">
+					<span class="fa-stack fa-4x">
+						<i class="fas fa-circle fa-stack-2x text-primary"></i>
+						<i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+					</span>
+					<h4 class="service-heading">Cloud Infrastructure & DevOps</h4>
+					<p class="text-muted">I design and manage cloud infrastructure with automated deployments,
+						monitoring, and scaling to keep applications secure, stable, and production-ready.</p>
 				</div>
 				<div class="col-md-4">
 					<span class="fa-stack fa-4x">
@@ -105,74 +121,101 @@
 						<i class="fas fa-paint-brush fa-stack-1x fa-inverse"></i>
 					</span>
 					<h4 class="service-heading">Graphic Design</h4>
-					<p class="text-muted">I believe in the power of elegant minimalism in a world increasingly saturated with glaring color.</p>
-				</div>
-				<div class="col-md-4">
-					<span class="fa-stack fa-4x">
-						<i class="fas fa-circle fa-stack-2x text-primary"></i>
-						<i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-					</span>
-					<h4 class="service-heading">Responsive Web Design</h4>
-					<p class="text-muted">Responsive and mobile friendly websites provides an optimal experience while going through your website.</p>
+					<p class="text-muted">I create clean, minimal visual designs that prioritize clarity and usability,
+						helping products communicate effectively without unnecessary visual complexity.</p>
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="page-section bg-light" id="portfolio">
-	    <div class="container">
-	        <div class="text-center">
-	            <h2 class="section-heading text-uppercase">Portfolio</h2>
-	            <h3 class="section-subheading text-muted">Projects Done</h3>
-	        </div>
-	        <div class="row">
-	            <div class="col-lg-4 col-sm-6 mb-4">
-	                <div class="portfolio-item">
-	                    <a class="portfolio-link" href="http://rmis2020.herokuapp.com/" target="_blank">
-	                        <img class="img-fluid" src="img/portfolio/rmis.jpg" alt="RMIS" />
-	                    </a>
-	                    <div class="portfolio-caption">
-	                        <div class="portfolio-caption-heading">Rice Mill Information System</div>
-	                        <!-- <div class="portfolio-caption-subheading text-muted">Click for demo</div> -->
-	                    </div>
-	                </div>
-	            </div>
-	            <div class="col-lg-4 col-sm-6 mb-4">
-	                <div class="portfolio-item">
-	                    <a class="portfolio-link" href="http://wms2019.herokuapp.com/" target="_blank">
-	                        <img class="img-fluid" src="img/portfolio/wms.png" alt="WMS" />
-	                    </a>
-	                    <div class="portfolio-caption">
-	                        <div class="portfolio-caption-heading">Warehouse Management System</div>
-	                        <!-- <div class="portfolio-caption-subheading text-muted">Click for demo</div> -->
-	                    </div>
-	                </div>
-	            </div>
-	            <div class="col-lg-4 col-sm-6 mb-4">
-	                <div class="portfolio-item">
-	                    <!-- <a class="portfolio-link" href="#"> -->
-	                        <img class="img-fluid" src="img/portfolio/sp.png" alt="SP" />
-	                    <!-- </a> -->
-	                    <div class="portfolio-caption">
-	                        <div class="portfolio-caption-heading">NDMU Student Portal</div>
-	                        <!-- <div class="portfolio-caption-subheading text-muted">Demo not available</div> -->
-	                    </div>
-	                </div>
-	            </div>
+		<div class="container">
+			<div class="text-center">
+				<h2 class="section-heading text-uppercase">Portfolio</h2>
+				<h3 class="section-subheading text-muted">Projects Done</h3>
+			</div>
+			<div class="row">
 				<div class="col-lg-4 col-sm-6 mb-4">
-	                <div class="portfolio-item">
-	                    <a class="portfolio-link" href="https://www.easeddepedkor.net/" target="_blank">
-	                        <img class="img-fluid" src="img/portfolio/eased.png" alt="SP" />
-	                    </a>
-	                    <div class="portfolio-caption">
-	                        <div class="portfolio-caption-heading">EASED System</div>
-	                        <!-- <div class="portfolio-caption-subheading text-muted">Click image to view project</div> -->
-	                    </div>
-	                </div>
-	            </div>
-	        </div>
-	    </div>
+					<div class="portfolio-item">
+						<a class="portfolio-link" data-toggle="modal" data-target="#portfolioModal"
+							data-img-src="img/portfolio/rmis.jpg" data-title="Rice Mill Information System">
+							<img class="img-fluid" src="img/portfolio/rmis.jpg" alt="RMIS" />
+						</a>
+						<div class="portfolio-caption">
+							<div class="portfolio-caption-heading">Rice Mill Information System</div>
+							<!-- <div class="portfolio-caption-subheading text-muted">Click for demo</div> -->
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6 mb-4">
+					<div class="portfolio-item">
+						<a class="portfolio-link" data-toggle="modal" data-target="#portfolioModal"
+							data-img-src="img/portfolio/wms.png" data-title="Warehouse Management System">
+							<img class="img-fluid" src="img/portfolio/wms.png" alt="WMS" />
+						</a>
+						<div class="portfolio-caption">
+							<div class="portfolio-caption-heading">Warehouse Management System</div>
+							<!-- <div class="portfolio-caption-subheading text-muted">Click for demo</div> -->
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6 mb-4">
+					<div class="portfolio-item">
+						<a class="portfolio-link" data-toggle="modal" data-target="#portfolioModal"
+							data-img-src="img/portfolio/sp.png" data-title="NDMU Student Portal">
+							<img class="img-fluid" src="img/portfolio/sp.png" alt="SP" />
+						</a>
+						<div class="portfolio-caption">
+							<div class="portfolio-caption-heading">NDMU Student Portal</div>
+							<!-- <div class="portfolio-caption-subheading text-muted">Demo not available</div> -->
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6 mb-4">
+					<div class="portfolio-item">
+						<a class="portfolio-link" data-toggle="modal" data-target="#portfolioModal"
+							data-img-src="img/portfolio/eased.png" data-title="EASED System">
+							<img class="img-fluid" src="img/portfolio/eased.png" alt="SP" />
+						</a>
+						<div class="portfolio-caption">
+							<div class="portfolio-caption-heading">EASED System</div>
+							<!-- <div class="portfolio-caption-subheading text-muted">Click image to view project</div> -->
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6 mb-4">
+					<div class="portfolio-item">
+						<a class="portfolio-link" data-toggle="modal" data-target="#portfolioModal"
+							data-img-src="img/portfolio/snap-raise-manage.png" data-title="Snap! Raise | Manage">
+							<img class="img-fluid" src="img/portfolio/snap-raise-manage.png" alt="SP" />
+						</a>
+						<div class="portfolio-caption">
+							<div class="portfolio-caption-heading">Snap! Raise | Manage</div>
+							<!-- <div class="portfolio-caption-subheading text-muted">Click image to view project</div> -->
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
+
+	<!-- Portfolio Modal -->
+	<div class="modal fade" id="portfolioModal" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="portfolioModalTitle"></h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body text-center">
+					<img class="img-fluid" id="portfolioModalImage" src="" alt="" />
+					<p class="mt-3" id="portfolioModalLink"></p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- Team -->
 	<section class="" style="background-color: #ddd;" id="team">
@@ -186,7 +229,8 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="team-member">
-						<img class="mx-auto img-fluid rounded-circle" src="img/ervin.jpg" alt="" style="max-width: 100%;">
+						<img class="mx-auto img-fluid rounded-circle" src="img/ervin.jpg" alt=""
+							style="max-width: 100%;">
 						<h4>Ervin Beñez</h4>
 						<p class="text-muted">Web Developer/Graphic Artist</p>
 						<ul class="list-inline social-buttons">
@@ -221,7 +265,8 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-8 mx-auto text-center">
-					<p class="large text-muted">Hi!, I'm Ervin P. Beñez. I'm a web developer and a graphic artist from the Philippines.</p>
+					<p class="large text-muted">Hi!, I'm Ervin P. Beñez. I'm a web developer and a graphic artist from
+						the Philippines.</p>
 				</div>
 			</div>
 		</div>
@@ -233,15 +278,20 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading text-uppercase">Contact Me</h2>
-					<h3 class="section-subheading text-muted">Send me your inquiries and we will talk as soon as I receive your message.</h3>
+					<h3 class="section-subheading text-muted">Send me your inquiries and we will talk as soon as I
+						receive your message.</h3>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-8">
-					<h5 class="text-primary"> <i class="fa fa-envelope" ></i> <i class="text-warning" >ervinbenez@gmail.com</i> </h5>
-					<h5 class="text-primary"> <i class="fab fa-skype" ></i> <span class="text-warning" >ervinbenez_1</span> </h5>
-					<h5 class="text-primary"> <i class="fa fa-mobile" ></i> <i class="text-warning" >+63917 777 3047</i> </h5>
-					<h5 class="text-primary"> <i class="fa fa-map-marker-alt" ></i> <i class="text-warning" > Koronadal City, South Cotabato, Philippines 9506 </i> </h5>
+					<h5 class="text-primary"> <i class="fa fa-envelope"></i> <i
+							class="text-warning">ervinbenez@gmail.com</i> </h5>
+					<h5 class="text-primary"> <i class="fab fa-skype"></i> <span
+							class="text-warning">ervinbenez_1</span> </h5>
+					<h5 class="text-primary"> <i class="fa fa-mobile"></i> <i class="text-warning">+63917 777 3047</i>
+					</h5>
+					<h5 class="text-primary"> <i class="fa fa-map-marker-alt"></i> <i class="text-warning"> Koronadal
+							City, South Cotabato, Philippines 9506 </i> </h5>
 				</div>
 			</div>
 		</div>
@@ -275,6 +325,26 @@
 
 	<!-- Custom scripts for this template -->
 	<script src="js/agency.min.js"></script>
+
+	<!-- Portfolio Modal Script -->
+	<script>
+		$(document).ready(function () {
+			$('.portfolio-link').on('click', function () {
+				var imgSrc = $(this).data('img-src');
+				var title = $(this).data('title');
+				var demoLink = $(this).data('demo-link');
+
+				$('#portfolioModalTitle').text(title);
+				$('#portfolioModalImage').attr('src', imgSrc).attr('alt', title);
+
+				if (demoLink) {
+					$('#portfolioModalLink').html('<a href="' + demoLink + '" target="_blank">View Live Demo</a>');
+				} else {
+					$('#portfolioModalLink').html('');
+				}
+			});
+		});
+	</script>
 
 </body>
 
