--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<div class="col-md-4">
 					<span class="fa-stack fa-4x">
 						<i class="fas fa-circle fa-stack-2x text-primary"></i>
-						<i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+						<i class="fas fa-cloud fa-stack-1x fa-inverse"></i>
 					</span>
 					<h4 class="service-heading">Cloud Infrastructure & DevOps</h4>
 					<p class="text-muted">I design and manage cloud infrastructure with automated deployments,
