add Nucleus Solar CRM portfolio item with image and modal

--- a/index.html
+++ b/index.html
@@ -195,6 +195,18 @@
 						</div>
 					</div>
 				</div>
+				<div class="col-lg-4 col-sm-6 mb-4">
+					<div class="portfolio-item">
+						<a class="portfolio-link" data-toggle="modal" data-target="#portfolioModal"
+							data-img-src="img/portfolio/nucleus-solar-map.png" data-title="Nucleus Solar CRM">
+							<img class="img-fluid" src="img/portfolio/nucleus-solar-map.png" alt="SP" />
+						</a>
+						<div class="portfolio-caption">
+							<div class="portfolio-caption-heading">Nucleus Solar CRM</div>
+							<!-- <div class="portfolio-caption-subheading text-muted">Click image to view project</div> -->
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
